package com.jpw.database.model.enums;

public enum Discipline {
    GAME,
    STORY,
    VIDEO,
    MOVIE,
    ART,
    MUSIC
}
