package com.jpw.database.model.enums;

public enum Role {
    ACTOR,
    DIRECTOR,
    WRITER,
    PRODUCER,
    COMPOSER,
    ARTIST,
    DEVELOPER
}
