package com.jpw.database.model.enums;

public enum State {
    FINISHED,
    EARLY_ACCESS,
    GETS_UPDATED,
    ABANDONED,
    UNKNOWN
}
