package com.jpw.database.model.enums;

public enum StoryType {
    BOOK,
    COMIC,
    MANGA,
    SHORT_STORY
}
