package com.jpw.database.model.enums;

public enum VideoType {
    SHORT,
    ANIME,
    VIDEO,
    MOVIE,
    SERIES,
    SHORT_FILM
}
