@startuml
' https://plantuml.com/class-diagram
top to bottom direction
skinparam classAttributeIconSize 0
skinparam linetype ortho

package "Enums" {
    enum Discipline {
      GAME
      VIDEO
      MOVIE
      STORY
      MUSIC
      ART
    }

    enum State {
      FINISHED
      GETS_UPDATES
      EARLY_ACCESS
      ABANDONED
      PLANNED
      UNKNOWN
    }

    enum Role {
        ACTOR
        DIRECTOR
        WRITER
        PRODUCER
        COMPOSER
        ARTIST
        DEVELOPER
    }

    enum VideoType {
        SHORT
        ANIME
        VIDEO
        MOVIE
        SERIES
        SHORT_FILM
    }

    enum StoryType {
        BOOK
        COMIC
        MANGA
        SHORT_STORY
    }
}

package "Media" {
    abstract class MediaBase {
        -title: String
        -primaryPersonId: UUID
        -primaryOrganisationId: UUID
        -discipline: Discipline
        -state: State
        -lastActivity: Date
        -link: String
        -note: String
    }

    package "Media Subtypes" {
        class Game {
            -version: String
        }

        class Story {
            -storyType: StoryType
        }

        class Video {
            -videoType: VideoType
            -lengthInMinutes: int
            -series: Series
        }

        class Music {
            -album: String
        }

        class Art {
            -medium: String
        }
    }
}

package "ManyToMany" {
    class MediaGenre {
        -mediaId: UUID
        -genreID: UUID
    }

    class MediaTag {
        -mediaId: UUID
        -tagId: UUID
    }

    class Genre {
        -name: String
    }

    class Tag {
        -name: String
    }
}

package "ManyToOne" {
    package "People" {
        class Person {
            -name: String
            -discipline: Discipline
        }

        class Credit {
            -person: Person
            -role: Role
        }
    }

    package "Ratings" {
        class Rating {
            -score: int
            -ratingPlatform: RatingPlatform
        }

        class RatingPlatform {
            -name: String
            -discipline: Discipline
        }
    }

    class Organization {
        -name: String
        -link: String
    }
}

package "OneToMany" {
    class Series {
        -title: String
        -discipline: Discipline
        -seasonCount: int
        -episodeCount: int
        -currentSeason: int
        -currentEpisode: int
        -state: State
    }

    class Franchise {
        -title: String
    }
}



' -------------------------
' Inheritance
' -------------------------
MediaBase <|-- Game
MediaBase <|-- Story
MediaBase <|-- Video
MediaBase <|-- Music
MediaBase <|-- Art

' -------------------------
' Credits (association class style)
' -------------------------
MediaBase "1" <-- "0..*" Credit
Person   "1" <-- "0..*" Credit

' -------------------------
' Classification
' -------------------------
MediaBase "0..*" <-- "1..*" MediaGenre
MediaBase "0..*" <--o "0..*" MediaTag
Genre "1" <-- "0..*" MediaGenre
Tag "1" <-- "0..*" MediaTag

' -------------------------
' Ratings
' -------------------------
MediaBase "1" <-- "0..*" Rating
RatingPlatform "1" <-- "0..*" Rating

' -------------------------
' Grouping
' -------------------------
Franchise "1" <--o "0..*" MediaBase
Series "1" <-- "0..*" Video
Organization "1..*" <-- "0..*" MediaBase

' invisible relationships for easier navigation
"ManyToMany" -[hidden]- "OneToMany"
"ManyToOne" -[hidden]- "Enums"

@enduml